# orlab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: canary.yml  ci.yml  docs.yml  release.yml
docs/: api.md  getting-started.md  index.md  maintainers.md  pypi_usage.md
docs/guides/: jars.md  listeners.md  monte-carlo.md  multi-version.md  simulation-setup.md  summaries.md
examples/: lazy.ipynb  lazy.py  monte_carlo.ipynb  monte_carlo.py  simple_plot.ipynb  simple_plot.py
examples/simple_ork/: advanced_plot.py  lazy.py  monte_carlo.py  simple_plot.py
orlab/core/: helper.py  jiterator.py  openrocket_instance.py  simulation_listener.py
orlab/utils/: utils.py
scripts/: debug_jvm.py
src/orlab/: __init__.py  __main__.py  _enums.py  _orhelper.py  _pins.py  errors.py  jars.py  listeners.py  parallel.py
src/orlab/core/: helper.py  jiterator.py  openrocket_instance.py  simulation_listener.py  summary.py  version.py
src/orlab/profiles/: __init__.py  or_15_03.py  or_22_02.py  or_23_09.py  or_24_12.py
tests/: _pool_stubs.py  test_api_surface.py  test_events.py  test_find_installed.py  test_hygiene.py  test_jars.py  test_jiterator.py  test_jvm_config.py  test_lifecycle.py  test_listeners.py  test_motor.py  test_pool.py  test_profiles.py  test_summary.py  test_tabular.py  test_version.py
tests/integration/: conftest.py  test_matrix.py
tests/integration/cases/: cold_start_motor_db.py  declarative_keys.py  (+16 more)
tools/: generate_enums.py  generate_profile.py
(+1 files in other folders)
