[project]
name = "orlab"
version = "0.5.0"
description = "Interact and script with OpenRocket from Python via JPype, with enhanced capabilities for simulations and computational workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [
    {name = "Cameron Brooks", email = "cambrooks3393@gmail.com"}
]
keywords = ["openrocket", "rocketry", "simulation", "jpype", "model-rocket"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jpype1>=1.5",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/CameronBrooks11/orlab"
Issues = "https://github.com/CameronBrooks11/orlab/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.11", "mypy>=1.10"]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orlab"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "SIM102", "SIM105"]

[tool.mypy]
packages = ["orlab"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jpype", "jpype.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires OpenRocket jars and a JVM (subprocess-per-version)",
]
